# sensor-guard-demo

./: README.md  pyproject.toml
sensor_guard_demo/: assets.py  definitions.py  sensors.py
