[project]
name = "sensor-guard-demo"
version = "0.1.0"
description = "Demo project for dagster-sensor-guard"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dagster",
    "dagster-sensor-guard",
    "dagster-webserver",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "pytest",
]

[tool.uv.sources]
dagster-sensor-guard = { git = "https://github.com/yudiell/dagster-sensor-guard.git", branch = "Y/1" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "sensor_guard_demo.definitions"
code_location_name = "sensor_guard_demo"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "sensor_guard_demo"
